vpc-subnets/loadbalancer.tf
resource "aws_lb" "alb" {
  name               = "terraform-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.subnet1.id, aws_subnet.subnet2.id]

  enable_deletion_protection = false
}

resource "aws_lb_target_group" "lb_tg" {
  name     = "terraform-lb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id
}

resource "aws_lb_listener" "nginx-lbl" {
  load_balancer_arn = aws_lb.alb.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.lb_tg.arn
  }
}

# resource "aws_lb_target_group_attachment" "asg" {
#   target_group_arn = aws_lb_target_group.lb_tg.arn
#   target_id        = aws_autoscaling_group.asg.id
#   port             = 80
# }

# resource "aws_lb_target_group_attachment" "server2" {
#   target_group_arn = aws_lb_target_group.lb_tg.arn
#   target_id        = aws_autoscaling_group.asg.id
#   port             = 80
# }
